Fix more spacing

--- a/css/aboutstyles.css
+++ b/css/aboutstyles.css
@@ -15,6 +15,14 @@ header {
     margin-left: auto;
     margin-right: auto;
     width: 90vw;
+
+    border-width: 1px;
+    border-color: red;
+    border-style: solid;
+}
+
+header a {
+    width: 5vw;
 }
 
 header a:hover {
