--- a/css/teamstyles.css
+++ b/css/teamstyles.css
@@ -16,6 +16,10 @@ header {
     width: 90vw;
 }
 
+header a {
+    width: 5vw;
+}
+
 header a:hover {
     cursor: grab;
 }
